// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListItem: should render icon 1`] = `
<div
  className="root"
>
  <div
    className="listItemIcon"
  >
    <Education icon />
  </div>
  <div
    className="listItemBody"
  >
    <div
      className="listItemTitle"
    >
      testTitle
    </div>
    <div
      className="listItemValue"
    >
      testValue
    </div>
  </div>
</div>
`;

exports[`ListItem: should render title value 1`] = `
<div
  className="root"
>
  <div
    className="listItemBody"
  >
    <div
      className="listItemTitle"
    >
      testTitle
    </div>
    <div
      className="listItemValue"
    >
      testValue
    </div>
  </div>
</div>
`;

exports[`ListItem: should render value 1`] = `
<div
  className="root"
>
  <div
    className="listItemBody"
  >
    <div
      className="listItemValue"
    >
      testValue
    </div>
  </div>
</div>
`;
